Add Runner and exec maven plugin